@@ -15,6 +15,7 @@ Application Changes:
 - Greatly sped up load times for characters with lots of weapons and/or gear.
 - Non-retroactive 'ware Essence modifiers now always automatically apply at character creation instead of only to 'ware bought sequentially after acquiring the source of a given non-retroactive 'ware Essence modifier. The non-retroactiveness now only starts applying after character creation.
 - A toggle has been added to allow the user to choose if they wish to pay for a lifestyle quality that would be free at their lifestyle level using nuyen instead of Lifestyle Points in accordance with Hard Targets p. 140. Fixes #4916.
+- Setting any values in ReplaceAttribute nodes to 0 now properly does not override those base values for a character's metatype.
 
 Data Changes:
 - Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
